<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/strawberry"
    android:padding="15dp"
    tools:context="hu.ait.android.minesweeper.MainActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/text_title"
            android:textSize="30sp"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">
        <hu.ait.android.minesweeper.MineSweeperView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id = "@+id/minesweep"/>
    </LinearLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flag"
        android:layout_gravity="center"
        android:textOn="@string/text_flag_mode"
        android:textOff="@string/text_step_mode"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetBtn"
        android:layout_gravity="center"
        android:text="@string/text_restart"/>

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_game_start"
        android:textColor="#000000"
        android:textSize="24sp" />

</LinearLayout>
